# rendercanvas

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  from_wgpu_canvas.md  pyproject.toml
docs/: Makefile  advanced.rst  api.rst  backend.rst  backendapi.rst  backends.rst  conf.py  contextapi.rst  contexts.rst  gui.rst  guide.rst  index.rst  start.rst  utils.rst  utils_asyncs.rst  utils_bitmappresentadapter.rst  utils_bitmaprenderingcontext.rst  utils_cube.rst
examples/: README.rst  cube_asyncio.py  cube_auto.py  cube_glfw.py  cube_http.py  cube_offscreen.py  cube_qt.py  cube_qt_trio.py  cube_rawloop.py  cube_trio.py  cube_wx.py  demo.py  drag.py  events.py  fastapi_app.py  gui_auto.py  gui_demo.py  gui_events.py  gui_glfw.py  gui_multiple.py  gui_qt.py  gui_qt_asyncio.py  gui_qt_embed.py  gui_threading.py  gui_wx.py  gui_wx_embed.py  html_canvas.py  local_browser.html  multicanvas_browser.html  multiple.py  noise.py  offsceen_threaded.py  pygfx_texture_context.py  pyodide.html  pyscript.html  qt_app.py  qt_app_asyncio.py  rendercanvas.ipynb  serve_browser_examples.py  serve_examples_with_pyscript.py  (+8 more)
rendercanvas/: MetalIOSurfaceHelper.m  __init__.py  _async_adapter.py  _async_sniffs.py  _context.py  _coreutils.py  _events.py  _gui_utils.py  _loop.py  _native_osx.py  _scheduler.py  _size.py  _version.py  anywidget.py  asyncio.py  auto.py  base.py  fastapi.py  glfw.py  gtk.py  html.py  http.py  jupyter.py  libMetalIOSurfaceHelper.dylib  loops.py  offscreen.py  pyodide.py  qt.py  raw.py  stub.py  terminal.py  trio.py  wx.py
tests/: test_asyncadapter.py  test_asyncs.py  test_backend_asyncio.py  test_backend_glfw.py  test_backend_offscreen.py  test_backend_qt.py  test_backend_raw.py  test_backend_terminal.py  test_backend_trio.py  test_backend_wx.py  test_backends.py  test_base.py  test_context.py  test_encoders.py  test_events.py  test_glfw.py  test_gui_base.py  test_gui_events.py  test_gui_glfw.py  test_gui_offscreen.py  test_gui_qt.py  test_gui_scheduling.py  test_gui_utils.py  test_gui_wx.py  test_loop.py  test_meta.py  test_offscreen.py  test_scheduling.py  (+5 more)
(+27 files in other folders)
