# ===== Project info

[project]
dynamic = ["version"]
name = "rendercanvas"
description = "One canvas API, multiple backends"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Almar Klein" }, { name = "Korijn van Golen" }]
keywords = [
    "canvas",
    "rendering",
    "graphics",
    "wgpu",
    "qt",
    "wx",
    "glfw",
    "jupyter",
]
requires-python = ">= 3.10"
dependencies = ["numpy"] # Numpy is the only hard dependency

[project.optional-dependencies]
# For users
jupyter = ["jupyter_rfb>=0.4.2", "simplejpeg; implementation_name != 'pypy'"]
notebook = ["anywidget", "simplejpeg; implementation_name != 'pypy'"]
glfw = ["glfw>=1.9"]
terminal = ["blessed"]
# For devs / ci
lint = ["ruff", "pre-commit"]
examples = [
    "flit",
    "numpy",
    "wgpu",
    "glfw",
    "pyside6",
    "imageio",
    "pytest",
    "blessed",
]
docs = [
    "flit",
    "sphinx>7.2",
    "sphinx_rtd_theme",
    "sphinx-gallery",
    "wgpu",
    "blessed",
]
tests = [
    "pytest",
    "wgpu",
    "glfw",
    "trio",
    "simplejpeg; implementation_name != 'pypy'",
]
dev = ["rendercanvas[lint,tests,examples,docs]"]

[project.entry-points."pyinstaller40"]
hook-dirs = "rendercanvas.__pyinstaller:get_hook_dirs"
tests = "rendercanvas.__pyinstaller:get_test_dirs"

[project.urls]
Homepage = "https://github.com/pygfx/rendercanvas"
Documentation = "https://rendercanvas.readthedocs.io"
Repository = "https://github.com/pygfx/rendercanvas"

# ===== Building

# Flit is great solution for simple pure-Python projects.
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# ===== Tooling

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "N", "B", "RUF"]
ignore = [
    "E501",   # Line too long
    "E731",   # Do not assign a `lambda` expression, use a `def`
    "B007",   # Loop control variable `x` not used within loop body
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]
